# scm-discovery

./: .env  .gitignore  README.md  leadservice_large_ext.csv  pyproject.toml
misc/: large_files_with_commits.sh  list_large_repos.py  list_large_repos.txt
src/github/: delete_org_repos.py
src/gitlab_discovery/: __init__.py  cli.py  gitlab_client.py  repo_reporting.py  reporting.py  repos.txt
